--- a/NEWS.org
+++ b/NEWS.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-02-27>
+#+DATE: Time-stamp: <2020-03-02>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -26,10 +26,10 @@ Copyright (C) 2006 - 2020  H. Dieter Wilhelm, GPL V3
      dependent components
    - Updated docu and completions for keywords, elements, etc. to v193
      (mostly to v201)
-   - A-M can now call the ANSYS online-help (you don't have to install
-     the local ANSYS help package, but it is recommended because of
-     speed reasons ;-)
-** Version 20.1.1 2020-02
+   - A-M can now browse the ANSYS online-help (you don't have to
+     install the local ANSYS help package, but it is recommended
+     because of speed reasons ;-)
+** Version 20.1.1 2020-02 bugfix
    - Renamed apdl-browse-apdl-guide to apdl-browse-ansys-apdl-manual
    - Improved configuration docu
    - EWW as a help viewer is now working under Windows
