--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2020-03-02>
+#+DATE: Time-stamp: <2020-03-03>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -22,17 +22,16 @@
    - 1/en, en is variable but fraction not fontified?
    - check highlighting of -license-category
    - The APDL menu entry in the terminal is not working => wrong type
-     argument!
+     argument!?
 ** wishes
 *** templates
+    - Add more WorkBench/ Discovery AIM templates
     - intelligent template selector with keywords in the line of helm
     - do we need interregion templates?
-    - Add more WorkBench/ Discovery AIM templates
     - what is the advantage of ARG1-9? => parameter system, should I
       include optionally?
 *** misc
    - open EWW in another window!
-   - include example code in function apdl: no!
    - Melpa integration <= 2021?
    - document the APDL Parameter Help Duration in M-?
    - how about deleting the work branch?
@@ -40,18 +39,14 @@
      in -template.el, how about document this directory somewhere?
    - Start optionally runbWB2 --aim, Discovery AIM
 ** misc
-   - bug-report about package.el "NAME-readme.txt", done
+   - why initialising anew any time -mode is called?
    - package-lint
      - problems with prefix names and default key bindings...
    - what is default.el <=> apdl-config.el?, dito. a-m.el!?
    - README (for package-el) README.org for github
    - ANSYS is often used synonymous for ANSYS MAPDL solver /
      interpreter or ANSYS Classics GUI
-   - flycheck :done
-     - initialise OK
-     - config => -config.org OK
-     - template OK
-   - checkdoc : from makefile
+   - checkdoc, flycheck etc. : from makefile
 * TODO 20.2.0 Release
   Feature freeze [2020-02-27 Do]: Testing of the template branch
   Update documentation, html brutally outdated, ..
@@ -59,14 +54,15 @@
     - create a README.org (copy from index.org?)
     - makefile for htmls or is it org-mode publish, it is
 ** Todos, bugs
-   - Intercept M-? with too many commas, throws an error, then the
-     counting is not updated any longer!
 ** checks
+   - M-?
    - compile
    - check C-u C-c C-b with various topics => Works partly ;-)
    - Customisation system
    - changed file size without warning to 30 MB what is Emacs-26
      using?
+* 20.1.1
+  - bug-report about package.el "NAME-readme.txt", done
 * 162-2:
 ** Bugs
    - C-c C-s first time visit: User variables file-name-extension:
