--- a/index.org
+++ b/index.org
@@ -2,7 +2,7 @@
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
 #+OPTIONS: e:t email:t f:t inline:t num:t p:nil pri:nil prop:nil
 #+OPTIONS: stat:t tags:t tasks:t tex:t timestamp:t toc:nil todo:t |:t
-#+DATE: Time-stamp: <2020-02-29>
+#+DATE: Time-stamp: <2020-03-08>
 #+TITLE: The Comprehensive APDL-Mode Documentation
 #+AUTHOR: H. Dieter Wilhelm
 #+EMAIL: dieter@duenenhof-wilhelm.de
@@ -24,21 +24,24 @@
 
 
 # ##############################
-# project definition
+# project definition for exporting to gh-pages
 
-# (setq org-publish-project-alist
-#       '(("apdl"
-# 	 :base-directory "/mnt/hgfs/D/apdl-mode/"
-# 	 :publishing-directory "/mnt/hgfs/D/apdl-mode/"
-# 	 :section-numbers nil
-# 	 :table-of-contents nil
-#          :publishing-function org-html-publish-to-html
-# 	 ;; :style "<link rel=\"stylesheet\"
-#          ;;             href=\"../other/mystyle.css\"
-#          ;;             type=\"text/css\"/>"
-# 	 )))
-
-
+#+begin_src elisp :exports none
+(setq org-publish-project-alist
+      '(("apdl"
+	 :base-directory "~/a-m/"
+	 :publishing-directory "~/a-m/"
+	 :section-numbers nil
+	 :exclude "helper\\|alwin\\|misc"
+	 :base-extension "org"
+	 :recursive t
+	 :table-of-contents nil
+         :publishing-function org-html-publish-to-html
+	 ;; :style "<link rel=\"stylesheet\"
+         ;;             href=\"../other/mystyle.css\"
+         ;;             type=\"text/css\"/>"
+	 )))
+#+end_src
 
 * Introduction
   You'll find in [[file:README.org][README.org]] the following topics:
